<resources>
    <string name="app_name">Movie Data App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trending">Trending Movies</string>
    <string name="apiTrending">popular</string>
    <string name="comingSoon">Upcoming Movies</string>
    <string name="apiComingSoon">upcoming</string>
    <string name="nowPlaying">Movies Playing Now</string>
    <string name="apiNowPlaying">now_playing</string>
    <string name="topRated">Top Rated Movies</string>
    <string name="apiTopRated">top_rated</string>

    <string name="topicTitle"><![CDATA[THIS IS TOPIC TITLE]]></string>
    <string name="some_random_text">Some Random Text</string>
    <string name="text_loading_text">Getting Data…</string>
    <string name="movie_image_description">Movie Image</string>
    <string name="error_placeholder_image">error placeholder image</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_release_year">Release Year: 2021</string>
    <string name="movie_running_time">Running Time: 120 Minutes</string>
    <string name="display_release_year">%s</string>
    <string name="display_running_time">%d minutes</string>
    <string name="image_path">https://image.tmdb.org/t/p/original%s</string>
    <string name="movie_overview_text">some random text</string>
    <string name="menu_about">About</string>
    <string name="title_about">About Movie Data App</string>
    <string name="text_about_1">This app is built using The Movie DB API</string>
    <string name="tmdb_logo_description">The Movie DB Logo</string>
    <string name="close_dialog">Close</string>
    <string name="movie_transition_name">%s</string>
    <string name="topic_name" />
    <string name="movie_overview_label">Overview</string>
    <string name="movie_status_label">Status</string>
    <string name="movie_lang_label">Original Language</string>
    <string name="movie_budget_label">Budget</string>
    <string name="movie_revenue_label">Revenue</string>
    <string name="movie_budget_display">$%,d</string>
    <string name="movie_revenue_display">$%,d</string>
    <string name="grid_movie_title">%s (%s)</string>

</resources>